Corrected banner stretching

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,7 +8,6 @@ body {
 
 img.banner {
     width:100%;
-    height:1000%;
     margin: 0;
     /*margin-top:-10%;
     padding-bottom:5%;*/
@@ -28,7 +27,7 @@ div.banner-sticker {
     position:sticky;
     top:0;
     display:block;
-    overflow:visible;
+    overflow: visible;
 }
 
 .clearfix {
